[tool.poetry]
name = "fakeit"
version = "0.1.8"
description = "Generate fake data"
authors = ["Ruslan Samoylov <ruslan.v.samoylov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
homepage = "https://github.com/RCheese/fakeit"
issues = "https://github.com/RCheese/fakeit/issues"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pytest = "^5.3.5"
toml = "^0.10.0"

[tool.poetry.extras]
django = ["django"]
sqlalchemy = ["sqlalchemy"]
pydantic = ["pydantic"]
all = ["sqlalchemy", "django"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
